Fixed the horizontal scroll bug and centered the slide_info div., etc

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -117,8 +117,8 @@
 
 .slide_info {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 140vw;
+  height: 80vh;
   margin: 0 auto;
 }
 
@@ -127,7 +127,7 @@
   align-items: center;
   justify-content: center;
   background: #57aeff;
-  width: 75vh;
+  width: 60vh;
 }
 
 .slide_info .text {
@@ -141,6 +141,10 @@
   margin: 0;
 }
 
+.slide_info .image img {
+  height: 80vh;
+}
+
 .rectangle_blue img {
   position: absolute;
   top: 0;
@@ -149,7 +153,7 @@
 
 .lightning {
   position: absolute;
-  left: 50%;
+  left: 70%;
   transform: translate(-50%, 0%);
   bottom: 0%;
 }
@@ -370,6 +374,11 @@ footer {
 }
 
 @media screen and (max-width: 1600px) {
+  #info {
+    margin-left: 0!important;
+    margin-bottom: 80vh;
+  }
+  
   .fill_form {
     width: 30vw;
   }
@@ -377,11 +386,15 @@ footer {
   .slide_info {
     display: flex;
     flex-direction: column;
+    height: 30vh;
   }
 
   .image img {
     width: 100vw;
   }
+
+  .slide_info .image img {height: 80vh;}
+
 
   .slide_info .text {
     width: 100vw;
@@ -394,15 +407,16 @@ footer {
 
   .rectangle_blue {
     width: 100vw;
-    padding: 2%;
+    height: 100vh;
+    padding: 5%;
   }
 
   .rectangle_blue, .slide_info .image {
-    height: auto;
+    height: 100;
   }
 
   .lightning {
-    top: 100%;
+    top: 350%;
     left: 78%;
   }
 
@@ -458,7 +472,7 @@ footer {
   }
 
   .navbar-collapse .btn[type="submit"] {
-      width: 100vw!important;
+      width: 85vw!important;
   }
 
   .navbar-collapse a, .navbar-collapse button {
